add gameobject class

--- a/D3D/D3D.vcxproj
+++ b/D3D/D3D.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="ErrorLogger.cpp" />
     <ClCompile Include="Graphics\AdapterReader.cpp" />
     <ClCompile Include="Graphics\Camera.cpp" />
+    <ClCompile Include="Graphics\GameObject.cpp" />
     <ClCompile Include="Graphics\Graphics.cpp" />
     <ClCompile Include="Graphics\Imgui\imgui.cpp" />
     <ClCompile Include="Graphics\Imgui\imgui_draw.cpp" />
@@ -187,6 +188,7 @@
     <ClInclude Include="Graphics\Camera.h" />
     <ClInclude Include="Graphics\ConstantBuffer.h" />
     <ClInclude Include="Graphics\ConstantBufferTypes.h" />
+    <ClInclude Include="Graphics\GameObject.h" />
     <ClInclude Include="Graphics\Graphics.h" />
     <ClInclude Include="Graphics\Imgui\imconfig.h" />
     <ClInclude Include="Graphics\Imgui\imgui.h" />
